// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`algPermitted > asymmetric permits an asymmetric alg and rejects HS* 1`] = `
[
  {
    "key": "alg",
    "message": "symmetric alg "HS256" is not permitted for this artifact (asymmetric only)",
  },
]
`;

exports[`algPermitted > rejects none for every class 1`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;

exports[`algPermitted > rejects none for every class 2`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;

exports[`algPermitted > rejects none for every class 3`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;

exports[`algPermitted > symmetric permits HS* and rejects an asymmetric alg 1`] = `
[
  {
    "key": "alg",
    "message": "asymmetric alg "ES512" is not permitted for this artifact (symmetric only)",
  },
]
`;
